@@ -14,8 +14,7 @@
   <distance name="bottom_height" value="7"/>
   <distance name="left_titlebar_edge" value="6"/>
   <distance name="right_titlebar_edge" value="6"/>
-  <distance name="button_width" value="17"/>
-  <distance name="button_height" value="17"/>
+  <aspect_ratio name="button" value="1.0"/>
   <distance name="title_vertical_pad" value="3"/>
   <border name="title_border" left="3" right="4" top="4" bottom="3"/>
   <border name="button_border" left="0" right="0" top="1" bottom="1"/>
@@ -57,13 +56,14 @@
 </frame_geometry>
 
 <!-- define constants -->
-<constant name="ArrowWidth" value="7"/>
-<constant name="ArrowHeight" value="5"/>
-<constant name="ButtonIPad" value="3"/>
+<constant name="ArrowSpacer" value="8"/>
+<constant name="MinArrowSize" value="7"/>
+<constant name="ButtonIPad" value="6"/>
 <constant name="ThickLineWidth" value="3"/>
 <constant name="IconTitleSpacing" value="2"/>
-<constant name="SpacerWidth" value="8"/>
-<constant name="SpacerHeight" value="11"/>
+<constant name="SpacerWidth" value="6"/>
+<constant name="SpacerHeight" value="9"/>
+<constant name="SpacerOffset" value="4"/>
 
 <!-- Buttons -->
 
@@ -73,10 +73,10 @@
 
 <draw_ops name="menu_button">
   <gtk_arrow state="normal" shadow="out" arrow="down"
-             x="(width - ArrowWidth) / 2"
-             y="(height - ArrowHeight) / 2"
-             width="ArrowWidth"
-             height="ArrowHeight"/>
+             x="ArrowSpacer `min` (width-MinArrowSize)/2"
+             y="ArrowSpacer `min` (height-MinArrowSize)/2"
+             width="(width-(ArrowSpacer*2)) `max` MinArrowSize"
+             height="(height-(ArrowSpacer*2)) `max` MinArrowSize"/>
 </draw_ops>
 
 <draw_ops name="menu_button_pressed">
@@ -134,10 +134,12 @@
 <draw_ops name="close_button">
   <line color="gtk:fg[NORMAL]"
         x1="ButtonIPad" y1="ButtonIPad"
-        x2="width - ButtonIPad - 1" y2="height - ButtonIPad - 1"/>
+        x2="width - ButtonIPad - 1" y2="height - ButtonIPad - 1"
+        width="1"/>
   <line color="gtk:fg[NORMAL]"
         x1="ButtonIPad" y1="height - ButtonIPad - 1"
-        x2="width - ButtonIPad - 1" y2="ButtonIPad"/>
+        x2="width - ButtonIPad - 1" y2="ButtonIPad"
+	width="1"/>
 </draw_ops>
 
 <draw_ops name="close_button_pressed">
@@ -182,10 +184,10 @@
 
 <draw_ops name="title_spacer">
   <gtk_vline state="normal" x="width+1-SpacerWidth/2"
-             y1="(height-SpacerHeight)/2"
-             y2="height - (height-SpacerHeight)/2"/>
+	y1="SpacerOffset"
+        y2="height - SpacerOffset"/>
 </draw_ops>
-
+	     
 <draw_ops name="title_text_focused_with_icon">
   <clip x="0" y="0" width="width-SpacerWidth" height="height"/>
   <title color="gtk:fg[SELECTED]"
